<resources>
    <string name="app_name">Kuppiya</string>
    <string name="kuppiya">kuppiya</string>
    <string name="login">Login</string>
    <string name="login_subtext">Please sign in to continue</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="log_in">Log in</string>
    <string name="not_a_member_signup">Not a member? Signup</string>
    <string name="signup">Signup</string>
    <string name="signup_subtext">Please sign up to continue</string>
    <string name="full_name">Full Name</string>
    <string name="email">Email</string>
    <string name="already_a_member_signin">Already a member? Signin</string>
    <string name="sign_up">Sign up</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="my_inquiries">My inquiries</string>
    <string name="my_solutions">My solutions</string>
    <string name="profile">Profile</string>
    <string name="settings">Settings</string>
    <string name="help">Help</string>
    <string name="sign_out">Sign out</string>
    <string name="jobs">Jobs</string>
    <string name="visit">Visit</string>
    <string name="date_of_birth">Date of birth</string>
    <string name="gender">Gender</string>
    <string name="employment_status">Employment status</string>
    <string name="update">Update</string>
    <string name="add_q_msg">What\'s this about?</string>
    <string name="type_here">Type here ...</string>
    <string name="news">News</string>
    <string name="add">Add</string>
    <string name="delete">Delete</string>
    <string name="edit_question">Edit Question</string>
    <string name="profile_photo">Profile photo</string>
    <string name="what_s_your_question">What\'s your question</string>
    <string name="tap_to_view_your_inquiries">Tap to view your inquiries</string>
    <string name="solutions_you_gave">Solutions you gave</string>
    <string name="user_profile">User profile</string>
    <string name="account_settings">Account settings</string>
    <string name="change">Change</string>
    <string name="remove">Remove</string>
    <string name="apply">Apply</string>
    <string name="none">-</string>
    <string name="social_media">Social media</string>
</resources>